增强了关联的操作
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1313 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many/BSelectionList.page
+++ b/src/main/webapp/many2many/BSelectionList.page
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
 <page-specification class="corner.orm.tapestry.page.relative.ReflectRelativeSelectionListPage">
-	<property initial-value="new corner.demo.model.many2many.B()" name="entity"/>
+    
+  
+    <inject property="rootFormPage" type="page" object="many2many/AForm"/>
 
-	<component id="ABForm" type="Form">
+    
+    <property initial-value="new corner.demo.model.many2many.B()" name="entity"/>
+    <component id="ABForm" type="Form">
     	<binding name="listener" value="listener:doNewRelativeAction"/>
 	</component>
 </page-specification>
