--- a/src/main/webapp/many2many/ASelectionList.page
+++ b/src/main/webapp/many2many/ASelectionList.page
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
 <page-specification class="corner.orm.tapestry.page.relative.ReflectRelativeSelectionListPage">
-	<property initial-value="new corner.demo.model.many2many.A()" name="entity"/>
+     
+    <inject property="rootFormPage" type="page" object="many2many/BForm"/>
 
+    <property initial-value="new corner.demo.model.many2many.A()" name="entity"/>
 	<component id="BAForm" type="Form">
     	<binding name="listener" value="listener:doNewRelativeAction"/>
 	</component>
