--- a/src/main/webapp/many2many/ASelectionList.page
+++ b/src/main/webapp/many2many/ASelectionList.page
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
 <page-specification class="corner.orm.tapestry.page.relative.ReflectRelativeSelectionListPage">
-     
+    <!-- 设定返回的根页面 -->
     <inject property="rootFormPage" type="page" object="many2many/BForm"/>
 
     <property initial-value="new corner.demo.model.many2many.A()" name="entity"/>
