--- a/src/main/webapp/many2many/BSelectionList.page
+++ b/src/main/webapp/many2many/BSelectionList.page
@@ -2,7 +2,7 @@
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
 <page-specification class="corner.orm.tapestry.page.relative.ReflectRelativeSelectionListPage">
     
-  
+	<!-- 设定返回的根页面 -->
     <inject property="rootFormPage" type="page" object="many2many/AForm"/>
 
     
