--- a/src/main/webapp/one2many/BForm.page
+++ b/src/main/webapp/one2many/BForm.page
@@ -3,7 +3,9 @@
 
 <page-specification class="corner.orm.tapestry.page.relative.RelectRelativeEntityFormPage">
   <description>corner.demo.model.one2many.B Form Page</description>
+  <!-- 设定返回的根页面 -->
   <inject property="rootFormPage" type="page" object="one2many/AForm"/>
+  
   <bean class="org.apache.tapestry.valid.ValidationDelegate" name="delegate"/>
   <property persist="entity" initial-value="new corner.demo.model.one2many.B()" name="entity"/>
   <component type="Form" id="BForm">
