加入numberPattern validator,同时增加了样例程序
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1427 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.page
+++ b/src/main/webapp/one/AForm.page
@@ -17,4 +17,10 @@
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.name" name="value"/>
   </component>
+    <component type="TextField" id="numField">
+    <binding value="message:name" name="displayName"/>
+    <binding value="translator:number,pattern=#.##" name="translator"/>
+    <binding value="ognl:entity.num" name="value"/>
+    <binding name="validators" value="validators:numPattern={4:2}"/>
+  </component>
 </page-specification>
