--- a/src/main/webapp/one/AForm.page
+++ b/src/main/webapp/one/AForm.page
@@ -10,12 +10,12 @@
     <binding value="ognl:true" name="clientValidationEnabled"/>
     <binding value="listener:doSaveEntityAction" name="success"/>
     <binding value="listener:doCancelEntityAction" name="cancel"/>
-    <binding value="listener:false" name="focus"/>
   </component>
   <component type="TextField" id="nameField">
     <binding value="message:name" name="displayName"/>
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.name" name="value"/>
+    <binding name="validators" value="validators:required"/>
   </component>
     <component type="TextField" id="numField">
     <binding value="message:name" name="displayName"/>
