增加状态bean。以及删除过期的api
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1437 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.page
+++ b/src/main/webapp/one/AForm.page
@@ -15,12 +15,12 @@
     <binding value="message:name" name="displayName"/>
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.name" name="value"/>
-    <binding name="validators" value="validators:required"/>
+    <binding name="validators" value="validators:required"/>    
   </component>
-    <component type="TextField" id="numField">
-    <binding value="message:name" name="displayName"/>
-    <binding value="translator:number,pattern=#.##" name="translator"/>
-    <binding value="ognl:entity.num" name="value"/>
-    <binding name="validators" value="validators:numPattern={4:2}"/>
+    <component type="TextField" id="passwordField">
+    <binding value="message:num" name="displayName"/>
+    <binding value="translator:string" name="translator"/>
+    <binding value="ognl:entity.password" name="value"/>
+    
   </component>
 </page-specification>
