加入vector向量类型，同时完成vector的translator
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1502 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AForm.page
+++ b/src/main/webapp/one/AForm.page
@@ -21,6 +21,10 @@
     <binding value="message:num" name="displayName"/>
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.password" name="value"/>
-    
+  </component>
+  <component type="TextField" id="colorsField">
+    <binding value="message:colors" name="displayName"/>
+    <binding value="translator:vector" name="translator"/>
+    <binding value="ognl:entity.colors" name="value"/>
   </component>
 </page-specification>
