修改，从ABForm页面之后保存跳转到ABList页面， 并在ABList页面增加了返回AForm页面以及在BAList页面返回BForm页面的方法
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1573 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/ABForm.page
+++ b/src/main/webapp/many2many2/ABForm.page
@@ -7,7 +7,7 @@
   
   <property name="thirdObject" initial-value="new corner.demo.model.many2many2.B()" />
   <!-- 设定返回的根页面 -->
-  <inject property="rootFormPage" type="page" object="many2many2/AForm"/>
+  <inject property="rootFormPage" type="page" object="many2many2/ABList"/>
   
   <property persist="entity" initial-value="new corner.demo.model.many2many2.AB()" name="entity"/>
   <component type="Form" id="ABForm">
