--- a/src/main/webapp/many2many2/BAForm.page
+++ b/src/main/webapp/many2many2/BAForm.page
@@ -7,7 +7,7 @@
   
   <property name="thirdObject" initial-value="new corner.demo.model.many2many2.A()" />
   <!-- 设定返回的根页面 -->
-  <inject property="rootFormPage" type="page" object="many2many2/BForm"/>
+  <inject property="rootFormPage" type="page" object="many2many2/ABList"/>
   
   <property persist="entity" initial-value="new corner.demo.model.many2many2.AB()" name="entity"/>
   <component type="Form" id="ABForm">
