--- a/src/main/webapp/many2many2/BAList.page
+++ b/src/main/webapp/many2many2/BAList.page
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
 <page-specification class="corner.orm.tapestry.page.relative.ReflectRelativeEntityListPage">
+    
+	<!-- 设定返回的根页面 -->
+	<inject property="rootFormPage" type="page" object="many2many2/BForm"/>    
+    
     <property initial-value="new corner.demo.model.many2many2.AB()" name="entity"/>
     <component id="ABForm" type="Form">
     	<binding name="listener" value="listener:doNewRelativeAction"/>
