--- a/src/main/webapp/many2many/BList.page
+++ b/src/main/webapp/many2many/BList.page
@@ -7,7 +7,7 @@
   <property initial-value="new corner.demo.model.many2many.B()" name="entity"/>
   <property persist="client" initial-value="new corner.demo.model.many2many.B()" name="queryEntity"/>
   <component type="Form" id="BQueryForm">
-    <binding value="listener:queryEntity" name="listener"/>
+    <binding value="listener:doQueryEntityAction" name="listener"/>
     <binding value="ognl:beans.delegate" name="delegate"/>
   </component>
   <component type="TextField" id="nameField">
