基本完成了TextAreaBox组件从DB中读取数据，现实下拉菜单的功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1588 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/BForm.page
+++ b/src/main/webapp/many2many2/BForm.page
@@ -17,4 +17,9 @@
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.name" name="value"/>
   </component>
+  <component type="TextField" id="cnNameField">
+    <binding value="message:cnName" name="displayName"/>
+    <binding value="translator:string" name="translator"/>
+    <binding value="ognl:entity.cnName" name="value"/>
+  </component>
 </page-specification>
