--- a/src/main/webapp/many2many2/ABList.page
+++ b/src/main/webapp/many2many2/ABList.page
@@ -6,7 +6,19 @@
 	<inject property="rootFormPage" type="page" object="many2many2/AForm"/>  
     
     <property initial-value="new corner.demo.model.many2many2.AB()" name="entity"/>
+	<property persist="client" initial-value="new corner.demo.model.many2many2.AB()" name="queryEntity"/>
+  
     <component id="ABForm" type="Form">
     	<binding name="listener" value="listener:doNewRelativeAction"/>
 	</component>
+	<bean class="org.apache.tapestry.valid.ValidationDelegate" name="delegate"/>
+	  <component type="Form" id="ABQueryForm">
+    <binding value="listener:doQueryEntityAction" name="listener"/>
+    <binding value="ognl:beans.delegate" name="delegate"/>
+  </component>
+  <component type="TextField" id="messageField">
+    <binding value="message:name" name="displayName"/>
+    <binding value="translator:string" name="translator"/>
+    <binding value="ognl:queryEntity.message" name="value"/>
+  </component>
 </page-specification>
