--- a/src/main/webapp/many2many2/ABList.page
+++ b/src/main/webapp/many2many2/ABList.page
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
-<page-specification class="corner.demo.page.many2many2.ABListPage">
+<page-specification class="corner.orm.tapestry.page.relative.ReflectRelativeEntityListPage">
   
 	<!-- 设定返回的根页面 -->
 	<inject property="rootFormPage" type="page" object="many2many2/AForm"/>  
