对TextAreaBox组件进行了重构
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1629 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/ABForm.page
+++ b/src/main/webapp/many2many2/ABForm.page
@@ -26,6 +26,8 @@
     <binding value="ognl:entity.message" name="value"/>
     <binding name="queryClass" value="literal:corner.demo.model.many2many2.B" />
     <binding name="entityService" value="entityService"/>
+    <binding name="label" value="literal:name" />
+    <binding name="cnlabel" value="literal:cnName" />
   </component>
   <component id="BField" type="Hidden">
   	<binding name="value" value="thirdObject" />    
