--- a/src/main/webapp/many2many2/AForm.page
+++ b/src/main/webapp/many2many2/AForm.page
@@ -17,4 +17,9 @@
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.name" name="value"/>
   </component>
+  <component type="TextField" id="cnNameField">
+    <binding value="message:cnName" name="displayName"/>
+    <binding value="translator:string" name="translator"/>
+    <binding value="ognl:entity.cnName" name="value"/>
+  </component>
 </page-specification>
