统一了TextAreaBox和CornerSelect使用的Model
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1633 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/BAForm.page
+++ b/src/main/webapp/many2many2/BAForm.page
@@ -23,7 +23,7 @@
     <binding value="ognl:entity.name" name="value"/>
   </component>
   <component type="corner:CornerSelect" id="messageField">
-    <binding value="ognl:entity.message" name="value"/>
+    <binding value="ognl:entity.a" name="value"/>
     <binding name="queryClass" value="literal:corner.demo.model.many2many2.A" />
     <binding name="entityService" value="entityService"/>
     <binding name="label" value="literal:name" />
