纠正了many2many2页面跳转的bug,把SelectModel移动到component包下
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@1638 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/js/corner/widget/templates/TextAreaBox.html
+++ b/src/main/js/corner/widget/templates/TextAreaBox.html
@@ -1,5 +1,5 @@
 <div style="position: relative; z-index: 100;">
-	<input type="text" name="" value="" 
+	<input type="hidden" name="" value="" 
 		dojoAttachPoint="comboBoxValue">
 	<input type="hidden" name="" value="" 
 		dojoAttachPoint="comboBoxSelectionValue">
