--- a/src/main/webapp/many2many2/BAForm.page
+++ b/src/main/webapp/many2many2/BAForm.page
@@ -23,7 +23,7 @@
     <binding value="ognl:entity.name" name="value"/>
   </component>
   <component type="corner:CornerSelect" id="messageField">
-    <binding value="ognl:entity.a" name="value"/>
+    <binding value="ognl:entity.message" name="value"/>
     <binding name="queryClass" value="literal:corner.demo.model.many2many2.A" />
     <binding name="label" value="literal:name" />
     <binding name="cnlabel" value="literal:cnName" />
