--- a/src/main/webapp/one/AForm.page
+++ b/src/main/webapp/one/AForm.page
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
 
-<page-specification class="corner.orm.tapestry.page.PoFormPage">
+<page-specification class="corner.demo.page.one.OnePageWithBlob">
   <description>corner.demo.model.one.A Form Page</description>
   <bean class="org.apache.tapestry.valid.ValidationDelegate" name="delegate"/>
   <property persist="entity" initial-value="new corner.demo.model.one.A()" name="entity"/>
@@ -27,4 +27,13 @@
     <binding value="translator:vector" name="translator"/>
     <binding value="ognl:entity.colors" name="value"/>
   </component>
+	
+	<!-- for blob -->
+  <component type="Upload" id="blobDataField">
+    <binding name="displayName" value="message:BlobData"/>
+    <binding name="file" value="ognl:uploadFile"/>
+  </component>
+  <component type="Checkbox" id="isEditBlobField">
+    <binding name="value" value="ognl:editBlob"/>
+  </component>      
 </page-specification>
