--- a/src/main/webapp/many2many2/BAForm.page
+++ b/src/main/webapp/many2many2/BAForm.page
@@ -28,6 +28,13 @@
     <binding name="label" value="literal:name" />
     <binding name="cnlabel" value="literal:cnName" />
   </component>
+  <component type="corner:CornerSelect" id="anothermessageField">
+    <binding value="ognl:entity.A" name="value"/>
+    <binding name="queryClass" value="literal:corner.demo.model.many2many2.A" />
+    <binding name="selectFilter" value="new corner.orm.tapestry.component.ObjectSelectFilter()"/>
+    <binding name="label" value="literal:name" />
+    <binding name="cnlabel" value="literal:cnName" />
+  </component> 
   <component id="BField" type="Hidden">
   	<binding name="value" value="thirdObject" />    
   </component>
