--- a/src/main/webapp/many2many2/ABForm.page
+++ b/src/main/webapp/many2many2/ABForm.page
@@ -22,13 +22,17 @@
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.name" name="value"/>
   </component>
-  <component type="corner:TextAreaBox" id="messageField">
+  <component type="corner:Selector" id="BField">
+    <binding value="message:name" name="displayName"/>
+    <binding value="ognl:entity.b" name="value"/>
+	<binding name="queryClassName" value="literal:corner.demo.model.many2many2.B"/>  
+	<binding name="returnValueFields" value="literal:this"/>  
+	<binding name="labelField" value="literal:cnName"/>  
+  </component>
+<!--  <component type="corner:TextAreaBox" id="messageField">
     <binding value="ognl:entity.message" name="value"/>
     <binding name="queryClass" value="literal:corner.demo.model.many2many2.B" />
     <binding name="label" value="literal:name" />
     <binding name="cnlabel" value="literal:cnName" />
-  </component>
-  <component id="BField" type="Hidden">
-  	<binding name="value" value="thirdObject" />    
-  </component>
+  </component> -->
 </page-specification>
