增家对过滤里面定义Label的支持
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2035 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/many2many2/ABForm.page
+++ b/src/main/webapp/many2many2/ABForm.page
@@ -31,7 +31,7 @@
   </component>
 <!--  <component type="corner:TextAreaBox" id="messageField">
     <binding value="ognl:entity.message" name="value"/>
-    <binding name="queryClass" value="literal:corner.demo.model.many2many2.B" />
+    <binding name="queryClassName" value="literal:corner.demo.model.many2many2.B" />
     <binding name="label" value="literal:name" />
     <binding name="cnlabel" value="literal:cnName" />
   </component> -->
