重构初步完成行的组件
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2042 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/ARowForm.page
+++ b/src/main/webapp/one/ARowForm.page
@@ -27,6 +27,7 @@
     <binding value="message:colors" name="displayName"/>
 <!--    <binding value="translator:vector" name="translator"/> -->
     <binding value="ognl:entity.colors" name="value"/>
+    <binding name="refVector" value="ognl:refVector"/>
   </component>
 	
 	<!-- for blob -->
