--- a/src/main/java/corner/orm/tapestry/component/matrix/RowComponent.html
+++ b/src/main/java/corner/orm/tapestry/component/matrix/RowComponent.html
@@ -3,9 +3,14 @@
 		<input jwcid="@TextField" value="ognl:value" asdf="asdf" translator="translator:vector"/>
 	</span>
 	<span jwcid="@Else">
-		<span jwcid="@For" source="ognl:value">
-			<input jwcid="@TextField" value="ognl:elementValue"/>
-		</span>
+		<table>
+			
+		
+
+			<tr jwcid="@For" source="ognl:refVector" value="ognl:tmpObj" >
+				<td><span jwcid="@Insert" value="ognl:tmpObj"/><br/><input jwcid="@TextField" value="ognl:elementValue"/></td>
+			</tr>
+</table>
 	</span>
 	
 	
