修改了RowField的样式
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2051 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/matrix/MatrixRowField.html
+++ b/src/main/java/corner/orm/tapestry/component/matrix/MatrixRowField.html
@@ -1,5 +1,5 @@
 <span jwcid="$content$">
-	<table>
+	<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr>
 		<span jwcid="@For" source="ognl:refVector" value="ognl:tmpObj" >
 			<td><input jwcid="@TextField" value="ognl:elementValue"/></td>
