加入了对样式的设定
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2052 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/matrix/MatrixHead.html
+++ b/src/main/java/corner/orm/tapestry/component/matrix/MatrixHead.html
@@ -2,7 +2,7 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tr>
 	<span jwcid="headIter" >
-		<td jwcid="informal" class="ognl:headClass">
+		<td jwcid="informal" class="ognl:tdClass" >
 			<span jwcid="headLabel"/>
 		</td>
 	</span>
