--- a/src/main/java/corner/orm/tapestry/component/matrix/MatrixRowField.html
+++ b/src/main/java/corner/orm/tapestry/component/matrix/MatrixRowField.html
@@ -2,7 +2,7 @@
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr>
 		<span jwcid="@For" source="ognl:refVector" value="ognl:tmpObj" >
-			<td class="ognl:tdClass"><input jwcid="@TextField" value="ognl:elementValue"/></td>
+			<td jwcid="@Any" class="ognl:tdClass"><input jwcid="@TextField" value="ognl:elementValue"/></td>
 		</span>
 	</tr>
 </table>
