增强了连带字段的录入
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2075 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/AMultiForm.page
+++ b/src/main/webapp/one/AMultiForm.page
@@ -18,7 +18,7 @@
 	
 	<binding name="labelField" value="literal:password"/>
     <binding name="queryClassName" value="literal:corner.demo.model.one.A"/>  
-	<binding name="returnValueFields" value="literal:password,name,name"/>
+	<binding name="returnValueFields" value="literal:password,password,name"/>
 	<binding name="updateFields" value="literal:this,passwordField,testField"/>
       
   </component>
