--- a/src/main/webapp/one/ARowForm.page
+++ b/src/main/webapp/one/ARowForm.page
@@ -27,7 +27,7 @@
     <binding value="message:colors" name="displayName"/>
     <binding value="ognl:entity.colors" name="value"/>
     <binding name="refVector" value="ognl:refVector"/>
-    
+    <binding name="translator" value="translator:number"/>
   </component>
 
   <component type="corner:MatrixHead" id="colorsHeadField">
