加入了对translator的支持
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2135 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/ARowForm.page
+++ b/src/main/webapp/one/ARowForm.page
@@ -27,7 +27,7 @@
     <binding value="message:colors" name="displayName"/>
     <binding value="ognl:entity.colors" name="value"/>
     <binding name="refVector" value="ognl:refVector"/>
-    <binding name="translator" value="translator:number"/>
+    <binding name="translator" value="translator:number,pattern=##0"/>
   </component>
 
   <component type="corner:MatrixHead" id="colorsHeadField">
