head也采用input方式显示
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2143 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/matrix/MatrixHead.html
+++ b/src/main/java/corner/orm/tapestry/component/matrix/MatrixHead.html
@@ -3,7 +3,7 @@
 	<tr>
 	<span jwcid="headIter" >
 		<td jwcid="informal" class="ognl:tdClass" >
-			<span jwcid="headLabel"/>
+			<input type="text" jwcid="@Any" class="ognl:inputClass" value="ognl:headObj"/>
 		</td>
 	</span>
 </tr>
