--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -1,14 +1,31 @@
-.alertDialog {
-    width: 50%;
-    border: 2px solid #ff660a;
-    padding: 1em;
-    padding-bottom: 1.7em;
-    background: #ffffff;
+.alertButton {
+	width: auto;
+	border: none;
+	background-color: #699ED9;
+	color: #fff;
+	padding: 0.1em;
+	border-bottom: 1px solid #5885b6 !important;
+	border-right: 1px solid #5885b6 !important;
+	border-top: 1px solid #92b8e2 !important;
+	border-left: 1px solid #92b8e2 !important;
+	cursor: hand;
+	cursor: pointer;
 }
 
-.alertDialog .dojoButton {
-    float: right;
+.alertDialog {
+    width: 30em;
+    border: 2px solid #ff660a;
+    padding: 1em;
+    background: #ffffff;
+    -moz-border-radius: 10px;
 }
+
+.alertContent .alertButton {
+    float:right;
+    position:relative;
+    bottom:1em;
+}
+
 .fieldMissing {
     background: #bedef4;
 }
@@ -19,17 +36,20 @@
 }
 
 .missingList, .invalidList {
-    padding: 0.6em;
+    padding-bottom: 0.6em;
     padding-top: 0.2em;
-    width:100%;
-    display:block;
+    padding-left:0.1em;
+    padding-right:0.2em;
+    margin: 0;
 }
 
 .missingList {
+    width: 24em;
     border-top: 4px solid #bedef4;
 }
 
 .invalidList {
+    width: 24em;
     border-top: 4px solid #ffaf7e;
 }
 
