初步完成rowHead的validator参数
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2156 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/ARowForm.page
+++ b/src/main/webapp/one/ARowForm.page
@@ -28,6 +28,7 @@
     <binding value="ognl:entity.colors" name="value"/>
     <binding name="refVector" value="ognl:refVector"/>
     <binding name="translator" value="translator:number,pattern=##0"/>
+    <binding name="validators" value="validators:max=10"/>
   </component>
 
   <component type="corner:MatrixHead" id="colorsHeadField">
