修改fieldMax为fieldMin，并更新使用fieldMin的所以测试
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2182 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/validator/FieldMinForm.page
+++ b/src/main/webapp/validator/FieldMinForm.page
@@ -20,7 +20,7 @@
   <component type="TextField" id="numField">
     <binding value="message:num" name="displayName"/>
     <binding value="translator:number" name="translator"/>
-    <binding name="validators" value="validators:fieldMax=maxnumField"/>
+    <binding name="validators" value="validators:fieldMin=maxnumField"/>
     <binding value="ognl:entity.num" name="value"/>
   </component>
   <component type="TextField" id="maxnumField">
