--- a/src/main/java/corner/orm/tapestry/component/matrix/MatrixHead.html
+++ b/src/main/java/corner/orm/tapestry/component/matrix/MatrixHead.html
@@ -3,7 +3,7 @@
 	<tr>
 	<span jwcid="headIter" >
 		<td jwcid="informal" class="ognl:tdClass" >
-			<input type="text" jwcid="@Any" class="ognl:inputClass" value="ognl:headObj"/>
+			<input type="text" jwcid="@Any" class="ognl:inputClass" value="ognl:headObj" readonly="true"/>
 		</td>
 	</span>
 </tr>
