git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2386 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/matrix/MatrixHead.html
+++ b/src/main/java/corner/orm/tapestry/component/matrix/MatrixHead.html
@@ -8,7 +8,7 @@
 	</span>
 	<span jwcid="@If" condition="ognl:needFill">
 		<span jwcid="@For" source="ognl:fillSource">
-			<td jwcid="informal" class="ognl:tdClass" >
+			<td jwcid="@Any" class="ognl:tdClass" >
 				<input type="text" jwcid="@Any"  class="ognl:inputClass"  value="" readonly="true"/>
 			</td>
 		</span>
