uploadBox组建加入是否是图片文件判断
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2409 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
+++ b/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
@@ -15,7 +15,12 @@
 		</tr>
 		<tr>
 			<td>
-				<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><img jwcid="@Image" id="imgview" image="ognl:blobAsset" border="0"/></a>
+				<span jwcid="@If" condition="ognl:ImageFile eq true">
+					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><img jwcid="@Image" id="imgview" image="ognl:blobAsset" border="0"/></a>
+				</span>
+				<span jwcid="@Else">
+					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}">查看</a>
+				</span>
 			<td>
 		</tr>
 	</table>
