uploadBox组建加入是否是图片文件判断
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2410 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/upload/APersonForm.page
+++ b/src/main/webapp/upload/APersonForm.page
@@ -34,6 +34,7 @@
     <binding name="uploadFile" value="uploadFile"/>
     <binding name="blobEntity" value="entity"/>
     <binding name="editBlob" value="editBlob"/>
+    <binding name="imageFile" value="true"/>
   </component>
   
     
