修改uoploadBox代码，准备尝试传递Validator
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2434 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
+++ b/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
@@ -8,7 +8,7 @@
 					  <div align="center">
 						<input type="checkbox" name="Input" jwcid="isEditBlobField" />
 					  </div></td>
-					<td width="95%"><input type="file" name="blobDataField" jwcid="blobDataField"  /></td>
+					<td width="95%"><input type="file" name="blobData" jwcid="blobDataField"  /></td>
 				  </tr>
 				</table>
 			<td>
