--- a/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
+++ b/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
@@ -19,30 +19,9 @@
 					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><img jwcid="@Image" id="ImageField" image="ognl:blobAsset" border="0"/></a>
 				</span>
 				<span jwcid="@Else">
-					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}">查看</a>
+					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><span jwcid="@Insert" value="ognl:Msg">查看</span></a>
 				</span>
 			<td>
 		</tr>
 	</table>
-	<!--script type="text/javascript" language="JavaScript">
-		
-		onchange="Preview()"
-		function Preview(){
-    var objimg = dojo.byId('ImageField');
-    var filepath = dojo.byId('blobDataField').value;
-    re='/\\/g';
-    filepath = filepath.replace(re,'/');
-    
-    var fileext = filepath.substring(filepath.length-4,filepath.length)
-    fileext = fileext.toLowerCase();
-    if (fileext=='.gif' || fileext=='.png'){
-        objimg.src="file:///"+filepath;
-        objimg.style.display='';
-    }
-    else{
-        objimg.style.display='none';
-        alert('fafdsaf');
-    }
-}
-	</script-->
 </span>
