--- a/src/main/js/corner/widget/templates/QueryDialog.html
+++ b/src/main/js/corner/widget/templates/QueryDialog.html
@@ -1,7 +1,7 @@
 <div id="${this.widgetId}" class="queryDialog" dojoattachpoint="wrapper" >
 	<input type="button" value="Query" dojoattachpoint="queryButtonNode" dojoAttachEvent="onClick: buttonClick"/>
 	<div dojoattachpoint="dlgDiv" style="display:none;width:95%" class="${this.contentClass}">
-		<iframe marginwidth="0" marginheight="0" scrolling="auto" width="100%" height="100%" frameborder="0" dojoattachpoint="frameNode"/><br/>
-		<input type="button" value="close" dojoattachpoint="hideBtn" dojoAttachEvent="onClick: hideDlg" class="${this.buttonClass}"/>
+		<input type="button" value="close" dojoattachpoint="hideBtn" dojoAttachEvent="onClick: hideDlg" class="${this.buttonClass}"/><br/>
+		<iframe marginwidth="0" marginheight="0" scrolling="auto" width="100%" height="100%" frameborder="0" dojoattachpoint="frameNode"/>
 	</div>
 </div>
