--- a/src/main/js/corner/widget/templates/QueryDialog.html
+++ b/src/main/js/corner/widget/templates/QueryDialog.html
@@ -2,6 +2,7 @@
 	<input type="button" value="Query" dojoattachpoint="queryButtonNode" dojoAttachEvent="onClick: buttonClick"/>
 	<div dojoattachpoint="dlgDiv" style="display:none;width:95%" class="${this.contentClass}">
 		<input type="button" value="close" dojoattachpoint="hideBtn" dojoAttachEvent="onClick: hideDlg" class="${this.buttonClass}"/><br/>
-		<iframe marginwidth="0" marginheight="0" scrolling="auto" width="100%" height="100%" frameborder="0" dojoattachpoint="frameNode"/>
+		<iframe marginwidth="0" marginheight="0" scrolling="auto" width="100%" height="90%" frameborder="0" dojoattachpoint="frameNode"/><br/>
+		<span>aksdjflaksjdf</span>
 	</div>
 </div>
