--- a/src/main/webapp/upload/APersonForm.page
+++ b/src/main/webapp/upload/APersonForm.page
@@ -30,7 +30,7 @@
     <binding name="blobEntity" value="entity"/>
     <binding name="editBlob" value="editBlob"/>
     <binding name="imageFile" value="true"/>
-    <binding name="fileValidators" value="validators:required"/>
+    <binding name="fileValidators" value="validators:pictureSize={8000:9999}"/>
   </component>
   
     
