UploadBox完成，目前可以使用
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2512 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/upload/APersonForm.page
+++ b/src/main/webapp/upload/APersonForm.page
@@ -30,8 +30,8 @@
     <binding name="blobEntity" value="entity"/>
     <binding name="editBlob" value="editBlob"/>
     <binding name="imageFile" value="true"/>
-    <binding name="fileValidators" value="validators:required"/>
-    <!--binding name="fileValidators" value="validators:pictureSize={8000:9999}"/-->
+    <!--binding name="fileValidators" value="validators:required"/-->
+    <binding name="fileValidators" value="validators:pictureSize={1000:1000}"/>
   </component>
   
     
