初步完成对queryDialog，并增加了测试页面
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2514 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/js/corner/widget/templates/QueryDialog.css
+++ b/src/main/js/corner/widget/templates/QueryDialog.css
@@ -1,3 +1,11 @@
+.frameClass{
+	border: 0px none;
+	margin: 0px;
+	padding: 0px;
+	height: 90%;
+	width: 100%;
+
+}
 .alertButton {
 	width: auto;
 	border: none;
