--- a/src/main/webapp/widget/QueryDialogTest.page
+++ b/src/main/webapp/widget/QueryDialogTest.page
@@ -13,6 +13,7 @@
   <component type="corner:DirectQueryDialog" id="dialog1">
 		<binding value="listener:doPopQueryPage" name="listener"/>
 	  <binding value="literal:widget/SelectionListPage" name="parameters"/>
+	    <binding value="literal:selectRecord" name="onSelectFunName"/>
   </component>
   <component type="corner:PageQueryDialog" id="dialog2">
 	  <binding value="literal:widget/SelectionListPage" name="queryPageName"/>
