增加uploadeBox非图形模式时，查看连接的显示隐藏功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2515 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
+++ b/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
@@ -19,7 +19,9 @@
 					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><img jwcid="@Image" id="ImageField" image="ognl:blobAsset" border="0"/></a>
 				</span>
 				<span jwcid="@Else">
+					<span jwcid="@If" condition="ognl:blobEntity.blobData != null">
 					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><span jwcid="@Insert" value="ognl:Msg">查看</span></a>
+					</span>
 				</span>
 			<td>
 		</tr>
