增加uploadBox图片样式可以配置功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2517 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/upload/APersonForm.page
+++ b/src/main/webapp/upload/APersonForm.page
@@ -32,6 +32,9 @@
     <binding name="imageFile" value="true"/>
     <!--binding name="fileValidators" value="validators:required"/-->
     <binding name="fileValidators" value="validators:pictureSize={1000:1000}"/>
+    <binding name="imgInputClass" value="literal:test-style"/>
+    <binding name="imgWidth" value="literal:50"/>
+    <binding name="imgInputClass" value="literal:100"/>
   </component>
   
     
