--- a/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
+++ b/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
@@ -16,7 +16,9 @@
 		<tr>
 			<td>
 				<span jwcid="@If" condition="ognl:ImageFile eq true">
-					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}"><img jwcid="@Image" id="ImageField" image="ognl:blobAsset" border="0"/></a>
+					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}">
+						<img jwcid="@Image" id="ImageField" class="ognl:imgInputClass" width="ognl:imgWidth" height="ognl:imgHeight" image="ognl:blobAsset" border="0"/>
+					</a>
 				</span>
 				<span jwcid="@Else">
 					<span jwcid="@If" condition="ognl:blobEntity.blobData != null">
