增加uploadBox图片样式可以配置功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2518 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
+++ b/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
@@ -17,7 +17,7 @@
 			<td>
 				<span jwcid="@If" condition="ognl:ImageFile eq true">
 					<a href="" jwcid="@ServiceLink" service="blob" parameters="ognl:{blobEntity}">
-						<img jwcid="@Image" id="ImageField" class="ognl:imgInputClass" width="ognl:imgWidth" height="ognl:imgHeight" image="ognl:blobAsset" border="0"/>
+						<img jwcid="@Image" id="ImageField" class="ognl:imgInputClass" width="ognl:imgWidth" height="ognl:imgHeight" image="ognl:blobAsset" border="ognl:imgBorder"/>
 					</a>
 				</span>
 				<span jwcid="@Else">
