加入选择框的图片
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2531 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/js/corner/widget/templates/QueryDialog.html
+++ b/src/main/js/corner/widget/templates/QueryDialog.html
@@ -1,5 +1,5 @@
 <div id="${this.widgetId}" class="queryDialog" dojoattachpoint="wrapper" >
-	<input type="button" value="Query" dojoattachpoint="queryButtonNode" dojoAttachEvent="onClick: buttonClick"/>
+	<image src="${dojoRoot}../corner/widget/templates/dic.gif" value="Query" dojoattachpoint="queryButtonNode" dojoAttachEvent="onClick: buttonClick"/>
 	<div dojoattachpoint="dlgDiv" style="display:none;width:95%" class="${this.contentClass}">
 		<div align="right"><input type="button" value="close" dojoattachpoint="hideBtn" dojoAttachEvent="onClick: hideDlg" class="${this.buttonClass}"/></div><br/>
 	</div>
