--- a/src/main/webapp/one/AForm.page
+++ b/src/main/webapp/one/AForm.page
@@ -27,4 +27,11 @@
     <binding value="translator:vector" name="translator"/>
     <binding value="ognl:entity.colors" name="value"/>
   </component>
+<component type="corner:DropdownDatePicker" id="birthdayField">
+    <binding value="message:colors" name="displayName"/>
+    <binding value="translator:date,pattern=yyyy-MM-dd" name="translator"/>
+    <binding name="iconAlt" value="literal:请选择日期" />
+    <binding name="disabled" value="false"/>
+    <binding value="ognl:entity.birthday" name="value"/>
+  </component>
 </page-specification>
