--- a/src/main/webapp/one/AForm.page
+++ b/src/main/webapp/one/AForm.page
@@ -34,4 +34,11 @@
     <binding name="disabled" value="false"/>
     <binding value="ognl:entity.birthday" name="value"/>
   </component>
+<component type="DropdownTimePicker" id="parkTimeField">
+    <binding value="message:colors" name="displayName"/>
+    <binding value="translator:date,pattern=hh-mm-ss" name="translator"/>
+    <binding name="iconAlt" value="literal:请选择时间" />
+    <binding name="disabled" value="false"/>
+    <binding value="ognl:entity.birthday" name="value"/>
+  </component>
 </page-specification>
