--- a/src/main/webapp/one/AForm.page
+++ b/src/main/webapp/one/AForm.page
@@ -29,8 +29,6 @@
   </component>
 <component type="corner:DropdownDatePicker" id="birthdayField">
     <binding value="message:colors" name="displayName"/>
-    <binding value="translator:date,pattern=yyyy-MM-dd" name="translator"/>
-    <binding name="iconAlt" value="literal:请选择日期" />
     <binding name="disabled" value="false"/>
     <binding value="ognl:entity.birthday" name="value"/>
   </component>
@@ -38,7 +36,7 @@
     <binding value="message:colors" name="displayName"/>
     <binding value="translator:date,pattern=hh-mm-ss" name="translator"/>
     <binding name="iconAlt" value="literal:请选择时间" />
-    <binding name="disabled" value="false"/>
-    <binding value="ognl:entity.birthday" name="value"/>
+    <binding name="disabled" value="true"/>
+    <binding value="ognl:entity.parkTime" name="value"/>
   </component>
 </page-specification>
