增加了corner:DatePicker,实现保存时候传入的是一个String类型的字符串
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2571 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/one/DatePickerForm.page
+++ b/src/main/webapp/one/DatePickerForm.page
@@ -27,4 +27,22 @@
     <binding value="translator:vector" name="translator"/>
     <binding value="ognl:entity.colors" name="value"/>
   </component>
+  <!--
+<component type="corner:DropdownDatePicker" id="birthdayField">
+    <binding value="message:colors" name="displayName"/>
+    <binding value="ognl:entity.birthday" name="value"/>
+  </component>
+<component type="DropdownTimePicker" id="parkTimeField">
+    <binding value="message:colors" name="displayName"/>
+    <binding value="translator:date,pattern=hh-mm-ss" name="translator"/>
+    <binding name="iconAlt" value="literal:请选择时间" />
+    <binding name="disabled" value="true"/>
+    <binding value="ognl:entity.parkTime" name="value"/>
+  </component>
+-->
+<component type="corner:DatePicker" id="bornDateField">
+    <binding value="message:colors" name="displayName"/>
+    <binding value="ognl:entity.bornDate" name="value"/>
+    <binding name="disabled" value="false"/>
+</component>
 </page-specification>
