加入了querydialog的title参数
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2596 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/js/corner/widget/templates/QueryDialog.css
+++ b/src/main/js/corner/widget/templates/QueryDialog.css
@@ -33,3 +33,11 @@
     position:relative;
     bottom:0em;
 }
+.titleDiv{
+	margin: 0 80px 0 0;
+}
+.btnDiv{
+	float: right;
+	width: 50px;
+	margin: 0;
+}
