--- a/src/main/js/corner/widget/templates/QueryDialog.html
+++ b/src/main/js/corner/widget/templates/QueryDialog.html
@@ -1,6 +1,7 @@
 <div id="${this.widgetId}" class="queryDialog" dojoattachpoint="wrapper" >
-	<image src="${dojoRoot}../corner/widget/templates/dic.gif" value="Query" dojoattachpoint="queryButtonNode" dojoAttachEvent="onClick: buttonClick"/>
+	<div><image src="${dojoRoot}../corner/widget/templates/dic.gif" value="Query" dojoattachpoint="queryButtonNode" dojoAttachEvent="onClick: buttonClick"/></div>
 	<div dojoattachpoint="dlgDiv" style="display:none;width:95%" class="${this.contentClass}">
-		<div align="right"><input type="button" value="close" dojoattachpoint="hideBtn" dojoAttachEvent="onClick: hideDlg" class="${this.buttonClass}"/></div><br/>
+		<div class="btnDiv"><input type="button" value="close" dojoattachpoint="hideBtn" dojoAttachEvent="onClick: hideDlg" class="${this.buttonClass}"/></div>
+		<div class="titleDiv"><span dojoattachpoint="titleNode"></span></div>
 	</div>
 </div>
