针对title的文字加入样式
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2597 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/js/corner/widget/templates/QueryDialog.html
+++ b/src/main/js/corner/widget/templates/QueryDialog.html
@@ -2,6 +2,6 @@
 	<div><image src="${dojoRoot}../corner/widget/templates/dic.gif" value="Query" dojoattachpoint="queryButtonNode" dojoAttachEvent="onClick: buttonClick"/></div>
 	<div dojoattachpoint="dlgDiv" style="display:none;width:95%" class="${this.contentClass}">
 		<div class="btnDiv"><input type="button" value="close" dojoattachpoint="hideBtn" dojoAttachEvent="onClick: hideDlg" class="${this.buttonClass}"/></div>
-		<div class="titleDiv"><span dojoattachpoint="titleNode"></span></div>
+		<div class="titleDiv"><span dojoattachpoint="titleNode" class="queryDialogTitle"></span></div>
 	</div>
 </div>
