添加文件类型判断，后台判断，js未写
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2627 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/upload/APersonForm.page
+++ b/src/main/webapp/upload/APersonForm.page
@@ -31,7 +31,7 @@
     <binding name="editBlob" value="editBlob"/>
     <binding name="imageFile" value="true"/>
     <!--binding name="fileValidators" value="validators:required"/-->
-    <binding name="fileValidators" value="validators:pictureSize={1000:1000}"/>
+    <binding name="fileValidators" value="validators:pictureSize={10:10},fileType={.exe}"/>
     <binding name="imgInputClass" value="literal:test-style"/>
     <binding name="imgWidth" value="literal:50"/>
     <binding name="imgHeight" value="literal:100"/>
