可以通过gainFence增加记录
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2948 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/gainPointForm.page
+++ b/src/main/webapp/gainPoint/gainPointForm.page
@@ -20,4 +20,10 @@
     <binding value="translator:string" name="translator"/>
     <binding value="ognl:entity.name" name="value"/>
   </component>
+  <component type="corner:GainFence" id="GainFenceField">
+    <binding value="literal:GainPointField;GainPointaaField" name="gainPointFields"/>
+    <binding value="ognl:new corner.demo.model.one2many.B()" name="entity"/>
+  </component>
+  
+  
 </page-specification>
