增加gp的page页面，准备做回显功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2951 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/AForm.page
+++ b/src/main/webapp/gainPoint/AForm.page
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE page-specification PUBLIC "-//Apache Software Foundation//Tapestry Specification 4.0//EN" "http://jakarta.apache.org/tapestry/dtd/Tapestry_4_0.dtd">
 
-<page-specification class="corner.orm.tapestry.page.relative.ReflectMultiManyEntityFormPage">
+<page-specification class="corner.demo.page.gainPoint.AFormPage">
   <description>corner.demo.model.one2many.A Form Page</description>
   <bean class="org.apache.tapestry.valid.ValidationDelegate" name="delegate"/>
   <property persist="entity" initial-value="new corner.demo.model.one2many.A()" name="entity"/>
