--- a/src/main/webapp/gainPoint/gainPointForm.page
+++ b/src/main/webapp/gainPoint/gainPointForm.page
@@ -23,6 +23,7 @@
   <component type="corner:GainFence" id="GainFenceField">
     <binding value="literal:GainPointField;GainPointaaField" name="gainPointFields"/>
     <binding value="literal:corner.demo.model.one2many.B" name="entityClass"/>
+    <binding value="literal:t" name="tableId"/>
     <binding value="source" name="source"/>
   </component>
   
