gp不复制hidden的value。为删除做准备
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2955 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/gainPoint/gainPointForm.page
+++ b/src/main/webapp/gainPoint/gainPointForm.page
@@ -21,7 +21,7 @@
     <binding value="ognl:entity.name" name="value"/>
   </component>
   <component type="corner:GainFence" id="GainFenceField">
-    <binding value="literal:GainPointField;GainPointaaField" name="gainPointFields"/>
+    <binding value="literal:GainPointIdField;GainPointField;GainPointaaField" name="gainPointFields"/>
     <binding value="literal:corner.demo.model.one2many.B" name="entityClass"/>
     <binding value="literal:t" name="tableId"/>
     <binding value="source" name="source"/>
