完成了将多个文件上传到page类中的操作
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@2970 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/mulitupload/AForm.page
+++ b/src/main/webapp/mulitupload/AForm.page
@@ -4,7 +4,7 @@
 <page-specification class="corner.demo.page.mulitupload.MulitUploadFormPage">
   <description>corner.demo.model.one.A Form Page</description>
   <bean class="org.apache.tapestry.valid.ValidationDelegate" name="delegate"/>
-  <property persist="entity" initial-value="new corner.demo.model.one.A()" name="entity"/>
+  <property persist="entity" initial-value="new corner.demo.page.mulitupload.TestOne()" name="entity"/>
 
   <component type="Form" id="AForm">
     <binding value="ognl:beans.delegate" name="delegate"/>
